# playground

./: .gitignore  Untitled.ipynb  Visualization of logarithmic scale..ipynb  catching_a_cheater.ipynb  cfp.csv  collatz_conjecture.ipynb  dfs_bfs.ipynb  prisoner_riddle.ipynb  pyproject.toml  read_speakers.py  sleeping_beauty.ipynb
