[tool.poetry]
name = "playground"
version = "0.1.0"
description = "Random stuff just to pass time"
authors = ["ninz <nreclarin@gmail.coml>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^1.23.1"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
